# ifocus

./: .gitattributes  .gitignore  FEATURES.md  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
dev_doc/: GITHUB_OAUTH_SETUP.md  GITHUB_SYNC.md  GitHub_OAuth_修复说明.md  GitHub_OAuth_常见错误.md  Next.js迁移-快速开始.md  OAUTH_QUICK_START.md  PAT移除总结.md  README.md  Tauri应用GitHubActions自动化部署与升级指南.md  从手动到自动：Tauri项目的GitHub_Actions全流程构建指南.md  单实例_Deep-Link_修复.md  单实例说明.md  待优化项实施计划.md  快速参考.md  测试_OAuth_Deep-Link.md  测试步骤.md  登录状态持久化.md  登录状态测试指南.md  认证功能改进总结.md  认证层架构设计.md  迁移到NextJS方案.md  迁移到认证抽象层指南.md  重复调用问题修复.md
scripts/: release.sh  setup-nextjs.ps1  setup-nextjs.sh
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: github_oauth.rs  main.rs
src/components/: MiniTimer.css  MiniTimer.tsx  Settings.css  Settings.tsx  TaskList.css  TaskList.tsx  Timer.css  Timer.tsx
src/hooks/: useAppState.ts  useGitHubSync.ts  useTasks.ts  useTimer.ts
src/services/: githubSync.ts  githubSyncV2.ts
src/services/auth/: AuthFactory.ts  index.ts  types.ts
src/services/auth/providers/: TauriAuthProvider.ts  WebAuthProvider.ts
src/services/auth/storage/: LocalStorageProvider.ts  TauriStorageProvider.ts
src/types/: index.ts
